manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attestation-server
  labels:
    app: attestation-server
spec:
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: attestation-server
